--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane alignment="CENTER" hgap="10" prefHeight="100.0" prefWidth="480.0" vgap="10"
+<GridPane alignment="CENTER" hgap="10" prefHeight="100.0" prefWidth="480.0" vgap="10" stylesheets="/sample/sample.css"
           xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1"
           fx:controller="sample.Controller">
    <columnConstraints>
